--- a/Matveev_IS_Exercise_6/index.html
+++ b/Matveev_IS_Exercise_6/index.html
@@ -26,6 +26,11 @@
     </div>
   </header>
   
+  <div class="nav-line-wrapper">
+    <div class="nav-line"></div>
+  </div>
+  
+
   <section class="hero">
     <img src="image/left.svg" class="hero-arrow left" alt="Left arrow">
   
@@ -37,7 +42,6 @@
     <img src="image/right.svg" class="hero-arrow right" alt="Right arrow">
   </section>
   
-
 
   <!-- MESSENGER SECTION -->
   <section class="messenger-section">
@@ -100,6 +104,268 @@
       </div>
     </div>
   </section>
+
+
+
+
+
+  <section class="about">
+    <div class="container">
+      <h2 class="section-title">О НАС</h2>
+      <div class="about-line black-line"></div>
+  
+      <div class="about-top">
+        <img src="image/people_work.png" alt="Devino Team" class="about-image">
+  
+        <div class="about-text">
+          <h3>Devino Telecom - born to be connected!</h3>
+          <p>Международный разработчик облачных платформ для общения и коммуникации бизнеса любого размера и профиля деятельности со своей глобальной аудиторией, штаб-квартира компании находится в Лондоне и штатом более 300 сотрудников.</p>
+          <p>Основана в 2005 году, компания прошла тернистый путь от сервис-провайдера SMS-рассылок до разработчика полного цикла и системного интегратора омниканальных коммуникационных решений. Ежедневно мы помогаем тысячам компаниям эффективно привлекать новых и быть на связи со своими текущими клиентами. Оптимизировать и упрощать пользовательское взаимодействие, достигать самых амбициозных бизнес целей в любой точке планеты.</p>
+        </div>
+      </div>
+  
+      <div class="about-features">
+        <div class="feature">
+          <img src="image/fast.svg" alt="">
+          <p>Быстрый запуск и возврат денег<br>в течение 30 дневного пробного периода</p>
+        </div>
+        <div class="feature">
+          <img src="image/api.svg" alt="">
+          <p>Открытый API для простой интеграции с любым веб-сайтом, CRM-системой или приложением</p>
+        </div>
+        <div class="feature">
+          <img src="image/nonstop.svg" alt="">
+          <p>Бесперебойность оказания сервиса за счёт гео-распределённой и резервируемой архитектуры</p>
+        </div>
+        <div class="feature">
+          <img src="image/7.svg" alt="">
+          <p>Круглосуточная поддержка<br>в веб-чате и по email на локальном языке</p>
+        </div>
+        <div class="feature">
+          <img src="image/edit.svg" alt="">
+          <p>Визуальный редактор сценариев омниканальных и триггерных рассылок</p>
+        </div>
+        <div class="feature">
+          <img src="image/nav.svg" alt="">
+          <p>Доработка функционала платформы под требования заказчика</p>
+        </div>
+      </div>
+  
+      <button class="about-button">больше о devino →</button>
+    </div>
+  </section>
+  
+  
+
+  <section class="solution">
+    <div class="container">
+    <div class="container-wide">
+      <h2 class="section-title">РЕШЕНИЕ</h2>
+      <div class="about-line black-line"></div>
+  
+      <div class="solution-card">
+        <img src="image/infogragic.png" alt="Devino Online" class="solution-image">
+      </div>
+    </div>
+    </div>
+  </section>
+  
+
+
+  <section class="clients">
+    <div class="container">
+    <div class="container-wide">
+      <h2 class="section-title">КЛИЕНТЫ</h2>
+      <div class="about-line black-line"></div>
+  
+      <div class="clients-slider-wrapper">
+        <div class="clients-slider" id="slider">
+          <img src="image/adidas.png" alt="Adidas">
+          <div class="divider"></div>
+          <img src="image/citilink.png" alt="Ситилинк">
+          <div class="divider"></div>
+          <img src="image/levis.png" alt="Levi’s">
+          <div class="divider"></div>
+          <img src="image/gj.png" alt="GJ">
+          <div class="divider"></div>
+          <img src="image/kfc.png" alt="KFC">
+        </div>
+      </div>
+  
+      <div class="clients-controls">
+        <button class="arrow left">←</button>
+        <div class="dots">
+          <span class="dot active"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+        <button class="arrow right">→</button>
+      </div>
+    </div>
+  </div>
+  </section>
+  
+  
+
+  <section class="partnership-wrapper">
+    <div class="container">
+      <div class="partnership">
+        <div class="partnership-inner">
+          <div class="partnership-image">
+            <img src="image/card.png" alt="Партнёрство">
+          </div>
+  
+          <div class="partnership-content">
+            <h3 class="partnership-title">партнерство</h3>
+            <p class="partnership-text">
+              Начните свой собственный бизнес или расширьте портфолио оказываемых услуг, используя проверенные временем решения и глобальную экспертизу, заполнив форму.
+            </p>
+            <button class="partnership-button">отправить →</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  
+
+
+
+
+  <section class="news">
+    <div class="container">
+      <div class="nav-line black"></div>
+      <h2 class="section-title">НОВОСТИ</h2>
+      
+  
+      <div class="news-slider-wrapper">
+        <div class="news-slider">
+          <div class="news-card">
+            <img src="image/people_work.png" alt="Новость 1">
+            <div class="news-info">
+              <p class="news-date">02.12.2019</p>
+              <p class="news-text">Devino Telecom приняла участие в организации Рождественской ёлки</p>
+              <button class="news-btn">читать →</button>
+            </div>
+          </div>
+  
+          <div class="news-card">
+            <img src="image/work_2.png" alt="Новость 2">
+            <div class="news-info">
+              <p class="news-date">02.12.2019</p>
+              <p class="news-text">Devino Telecom приняла участие в организации Рождественской ёлки</p>
+              <button class="news-btn">читать →</button>
+            </div>
+          </div>
+  
+          <div class="news-card">
+            <img src="image/work_2.png" alt="Новость 3">
+            <div class="news-info">
+              <p class="news-date">02.12.2019</p>
+              <p class="news-text">Devino Telecom приняла участие в организации Рождественской ёлки</p>
+              <button class="news-btn">читать →</button>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      <div class="news-nav">
+        <button class="arrow left">←</button>
+        <div class="dots">
+          <span class="dot active"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+        <button class="arrow right">→</button>
+      </div>
+  
+      <div class="news-all-wrapper">
+        <button class="news-all-btn">все новости →</button>
+      </div>
+    </div>
+  </section>
+  
+  
+  
+
+
+
+
+
+  <footer class="footer">
+    <div class="container footer-inner">
+  
+      <div class="footer-columns">
+        <div class="footer-column">
+          <h4>Продукты</h4>
+          <ul>
+            <li>WhatsApp business</li>
+            <li>Viber for Business</li>
+            <li>CMC-рассылка</li>
+            <li>Facebook messenger</li>
+            <li>Email-рассылка</li>
+            <li>Apple Business Chat</li>
+            <li>VK / OK</li>
+            <li>PUSH</li>
+            <li>Telegram</li>
+          </ul>
+        </div>
+  
+        <div class="footer-column">
+          <h4>Решения</h4>
+          <ul>
+            <li>DEVINO.ONLINE</li>
+            <li>DEVINO.CHAT</li>
+            <li>DEVINO.GATE</li>
+          </ul>
+        </div>
+  
+        <div class="footer-column">
+          <h4>Разработчикам</h4>
+          <ul>
+            <li>API and SDK</li>
+            <li>Статус платформы</li>
+            <li>Интеграции и плагины</li>
+          </ul>
+        </div>
+  
+        <div class="footer-column">
+          <h4>Компания</h4>
+          <ul>
+            <li>О нас</li>
+            <li>Цены</li>
+            <li>CRM club</li>
+            <li>Партнерам</li>
+            <li>Успешные кейсы клиентов</li>
+            <li>Блог и новости</li>
+            <li>Карьера</li>
+            <li>Контакты</li>
+            <li>Карта сайта</li>
+          </ul>
+        </div>
+  
+        <div class="footer-contact">
+          <p>sales@devinotele.com</p>
+          <div class="footer-socials">
+            <img src="image/vk_1.png" alt="VK">
+            <img src="image/facebook_1.png" alt="Facebook">
+            <img src="image/inst_1.png" alt="Instagram">
+          </div>
+        </div>
+      </div>
+  
+      <div class="footer-bottom">
+        <span>Лицензии</span>
+        <span>Политика конфиденциальности</span>
+        <span>2010–2020 © Devino telecom</span>
+        <span>Website design by <a href="#">OUR</a></span>
+      </div>
+    </div>
+  </footer>
+  
+
 
 </body>
 </html>
