--- a/Matveev_IS_Advanced_Level/index.html
+++ b/Matveev_IS_Advanced_Level/index.html
@@ -595,9 +595,11 @@
       <div class="spotlight-video">
         <div class="video-wrapper">
           <img src="image/video.png" alt="DocuSign Video Preview">
-          <div class="play-button">
-            <span>&#9658;</span>
+          
+          <div class="player">
+            <button class="play-button"> <span>&#9658;</span></button>
           </div>
+
         </div>
       </div>
     </div>
